@startuml ' Define entities 
entity "Customer" as customer { 
  * id: long
  + address: string
  + birth_month: int
  + birth_year: int
  + credit_card_count: int
  + credit_score: int
  + current_age: int 
  + email: string
  + firstName: string 
  + gender: string 
  + lastName: string
  + latitude: float
  + longitude: float
  + per_capita_income: float
  + retirement_age: int
  + total_debt: float
  + yearly_income: float
}

entity "Card" as card { 
  * id: long
  + account_open_date: date
  + card_brand: string
  + card_expiration_date: date
  + card_index: int
  + card_on_dark_web: boolean
  + card_type: string
  + credit_limit: float
  + cvv_code: string 
  + has_chip: boolean
  + number_cards_issued: int
  + pin_last_changed_year: int
  + customer_id: long
}

entity "Transaction" as transaction { 
  * id: long
  + fraud_detected: boolean
  + merchant_city: string
  + merchant_id: string
  + merchant_mcc_code: string
  + merchant_state: string
  + merchant_zip: string
  + transaction_amount: float 
  + transaction_datetime: datetime 
  + transaction_error: string 
  + transaction_type: string
  + card_id: string
}

entity "TransactionState" as transactionState { 
  * id: long
  * state: string
  + created_at: datetime
  + updated_at: datetime
  + deleted_at: datetime
}

customer "1" -- "*" card: customer_id
card "1" -- "*" transaction: card_id
transaction "1" -- "*" transactionState: id

@enduml